Bug 1170242 - On accessibility SetSelectionRange, scroll the selection into view. r=surkov